samples/_failures_safe/1761429711_dd5fbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_effd09e0.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_effd09e0.c:167:18: error: expected ‘;’ at end of input
  167 |             token
      |                  ^
      |                  ;
./samples/SAFE/__tmp_effd09e0.c:167:13: error: expected declaration or statement at end of input
  167 |             token
      |             ^~~~~
./samples/SAFE/__tmp_effd09e0.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_effd09e0.c:167:13: error: expected declaration or statement at end of input
